resolvendo bugs do menu

--- a/locales/en.json
+++ b/locales/en.json
@@ -2,6 +2,7 @@
     "menuInicio": "Home",
     "menuServicos": "Services",
     "menuClientes": "Customers",
+    "menuPortfolio": "Portfolio",
     "menuContato": "Contact",
     "tituloPt1": "Do you",
     "tituloPt2": "need more clients?",
