--- a/locales/es.json
+++ b/locales/es.json
@@ -2,6 +2,7 @@
     "menuInicio": "Inicio",
     "menuServicos": "Servicios",
     "menuClientes": "Clientes",
+    "menuPortfolio": "Cartera",
     "menuContato": "Contacte con",
     "tituloPt1": "¿Necesita",
     "tituloPt2": "más clientes?",
