--- a/locales/pt.json
+++ b/locales/pt.json
@@ -2,6 +2,7 @@
     "menuInicio": "Início",
     "menuServicos": "Serviços",
     "menuClientes": "Clientes",
+    "menuPortfolio": "Portfólio",
     "menuContato": "Contato",
     "tituloPt1": "Você precisa",
     "tituloPt2": "de mais clientes?",
